# chemtrain

./: .gitlab-ci.yml  .readthedocs.yml  LICENSE_SHORT  README.md  pylint  pyproject.toml  pytest.ini  setup.py
.github/workflows/: gitlab.yml  publish.yml  test.yml
chemtrain/: __init__.py  active_learning.py  data_processing.py  dimenet_basis_util.py  dropout.py  force_matching.py  ibi.py  layers.py  max_likelihood.py  neural_networks.py  pickle_jit.py  probabilistic.py  property_prediction.py  reweighting.py  sparse_graph.py  trainers.py  traj_quantity.py  traj_util.py  typing.py  util.py  version.py
chemtrain-deploy/: Dockerfile  Readme.md  WORKSPACE  build.py  chemtrain-deploy.def  jax.bazelrc
chemtrain-deploy/connector/: BUILD  buffer.cpp  buffer.h  compiler.cpp  compiler.h  domain.cpp  domain.h  graph_builder.cpp  graph_builder.h  libconnector.cpp  libconnector.h  model.proto  runner.cpp  runner.h  utils.cpp  utils.h  xla_call_module_loader.cpp  xla_call_module_loader.h
chemtrain-deploy/lammps_plugin/: CMakeLists.txt  chemtrain_deploy.cpp  pair_chemtrain_deploy.cpp  pair_chemtrain_deploy.h
chemtrain/chemtrain/: README.md  active_learning.py  data_processing.py  difftre.py  dropout.py  force_matching.py  ibi.py  ibi_run.py  layers.py  max_likelihood.py  neural_networks.py  preprocess_dataset.py  probabilistic.py  probability.py  property_prediction.py  pyproject.toml  relative_entropy.py  reweighting.py  sparse_graph.py  trainers.py  traj_quantity.py  traj_util.py  typing.py  util.py  version.py
chemtrain/chemtrain/chemtrain/: __init__.py  force_matching.py  sparse_graph.py
chemtrain/chemtrain/jax_md_mod/: custom_energy.py  custom_interpolate.py  custom_nn.py  custom_quantity.py  custom_simulator.py  custom_space.py  dropout_nn_util.py  io.py  sparse_graph.py  util.py
chemtrain/chemtrain/potential/: layers.py  prior.py
chemtrain/chemtrain/quantity/: __init__.py  constants.py  structure.py  thermodynamics.py  util.py
chemtrain/chemtrain/tests/: test_setup.py
chemtrain/chemtrain/util/: Postprocessing.py
chemtrain/data/: __init__.py  data_loaders.py  data_processing.py  preprocessing.py
chemtrain/deploy/: __init__.py  exporter.py  graphs.py  util.py
chemtrain/deploy/_protobuf/: model_pb2.py
chemtrain/ensemble/: __init__.py  evaluation.py  reweighting.py  sampling.py  templates.py
chemtrain/jax_md_mod/: __init__.py  custom_energy.py  custom_interpolate.py  custom_partition.py  custom_quantity.py  custom_simulator.py  io.py
chemtrain/learn/: __init__.py  active_learning.py  difftre.py  force_matching.py  max_likelihood.py  probabilistic.py  property_prediction.py
chemtrain/potential/: layers.py  neural_networks.py  prior.py  sparse_graph.py
chemtrain/quantity/: __init__.py  constants.py  observables.py  property_prediction.py  structure.py  thermodynamics.py  util.py
chemtrain/quantity/targets/: __init__.py  structure.py  thermodynamics.py  util.py
chemtrain/trainers/: __init__.py  base.py  extensions.py  trainers.py
chemtrain/trajectory/: __init__.py  reweighting.py  templates.py  traj_util.py
docs/: Doxyfile  chemtrain.jax_md_mod.custom_space.rst  chemtrain.layers.rst  chemtrain.neural_networks.rst  chemtrain.sparse_graph.rst  conf.py  index.rst  requirements.txt
docs/_data/: .gitattributes  TI_fm_results.npz  TI_fused_results.npz  energies_ethane.npy
docs/_data/output/: .gitattributes  AT_TI_pretrained_bottom_up.pkl  Fused_AT_Ti_params.pkl  (+10 more)
docs/_static/: custom.css  custom.js
docs/_templates/: class.rst  function.rst  global.rst  haiku.rst  method.rst
docs/algorithms/: difftre.md  force_matching.md  getting_started.md  prior_simulation.md  relative_entropy.md  trainers.rst
docs/api/: force_matching.rst  index.rst  trainers.rst  typing.rst
docs/chemtrain-deploy/: connector.rst  getting_started.md  implementation.md  installation.md
docs/examples/: AT_titanium_fused_training.ipynb  CG_alanine_dipeptide.ipynb  CG_water_difftre.ipynb  FM_alanine_dipeptide.md
docs/jax_md_mod/: chemtrain.jax_md_mod.custom_energy.rst  chemtrain.jax_md_mod.custom_interpolate.rst  chemtrain.jax_md_mod.custom_partition.rst  chemtrain.jax_md_mod.custom_quantity.rst  chemtrain.jax_md_mod.custom_space.rst  chemtrain.jax_md_mod.io.rst  index.rst  jax_md_mod.custom_energy.rst  jax_md_mod.custom_interpolate.rst  jax_md_mod.custom_partition.rst  jax_md_mod.custom_quantity.rst  jax_md_mod.custom_space.rst  jax_md_mod.io.rst
examples/: AT_titanium_fused_training.ipynb  AT_titanium_fused_training.md  CG_alanine_dipeptide.md  CG_water_difftre.ipynb  CG_water_difftre.md  difftre.ipynb  force_matching.ipynb  prior_simulation.ipynb  relative_entropy.ipynb  run_AT_titanium.sh  run_CG_alanine_dipeptide.sh  run_CG_water_difftre.sh  run_algorithm_examples.sh
examples/alanine_dipeptide/: alanine_force_matching.py  alanine_force_matching_prior.py  alanine_prior_simulation.py  alanine_relative_entropy.py  alanine_simulation.py  visualization.py
examples/data/: alanine_heavy.toml  energies_ethane.npy  ethane.toml  forces_ethane.npy  positions_ethane.npy
examples/water/: AT_water.py  CG_water_difftre.py  CG_water_difftre_active.py  CG_water_force_matching.py  CG_water_relative_entropy.py  CG_water_simulation.py  ibi.py
jax_md_mod/: __init__.py  custom_energy.py  custom_partition.py  custom_quantity.py  custom_simulate.py  custom_space.py  e3nn_mod.py  io.py
jax_md_mod/model/: dimenet_basis_util.py  dropout.py  layers.py  neural_networks.py  prior.py  sparse_graph.py
tests/: conftest.py
tests/data/: .gitattributes
tests/test_data/: test_data_loader.py
tests/test_jax_md_mod/: test_custom_partition.py
tests/test_potential/: test_prior.py
tests/test_trainers/: test_difftre.py  test_force_matching.py  test_relative_entropy.py
tests/test_utils/: test_mapping.py
util/: Initialization.py  Postprocessing.py  Preprocessing.py  preprocess_dataset.py
(+122 files in other folders)
