[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "chemtrain"
authors = [
    {name = "Stephan Thaler", email = "stephan.thaler@tum.de"},
    {name = "Paul Fuchs", email = "paul.fuchs@tum.de"},
]
description = "Machine-learning deep molecular dynamics potentials."
readme = "README.md"
license = {"text" = "Apache-2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers"
]
requires-python = ">=3.10"
dependencies = [
    'jax <= 0.4.30',
    'jaxlib <= 0.4.30',
    'scipy < 1.13', # Removed scipy.linal.tril, etc.
    'jax-md',
    'jax-sgmc',
    'optax',
    'dm-haiku',
    'sympy',
    'tree_math',
    'cloudpickle',
    'chex',
    'blackjax==0.3.0',
    'jaxopt',
    'dm-tree',
    'networkx',
]
dynamic = ["version"]

[project.urls]
"Documentation" = "https://chemtrain.readthedocs.io/en/latest/"
"Source" = "https://github.com/tummfm/chemtrain"
"Bug Tracker" = "https://github.com/tummfm/chemtrain/issues"

[project.optional-dependencies]
"all" = [
    "mdtraj",
    "matplotlib",
    'tomli',
    'tomli-w'
]
"test" = [
    "pylint",
    "pytest",
    "pytest-mock",
]
"docs" = [
    "sphinx >= 3",
    "sphinx-book-theme",
    "sphinx-autodoc-typehints == 1.11.1",
    "myst-nb",
    "matplotlib",
    "sphinx-remove-toctrees"
]
"stable" = [
    "jax == 0.3.25",
    "jaxlib == 0.3.25",
    "chex == 0.1.5",
    "orbax-checkpoint == 0.1.1",
    "orbax == 0.1.1"
]

[tool.setuptools.packages.find]
namespaces = false
include = ["chemtrain*", "jax_md_mod*"]
where = [""]

[tool.setuptools.dynamic]
version = {attr = "chemtrain.version.__version__"}